[gd_scene load_steps=14 format=3 uid="uid://wd4te2x7876j"]

[ext_resource type="Texture2D" uid="uid://d2ngyjfe6s7co" path="res://assets/background.png" id="1_br2km"]
[ext_resource type="Script" path="res://scenes/ObjectiveArea.gd" id="1_foi4b"]
[ext_resource type="Texture2D" uid="uid://3ruxfsvp87ub" path="res://assets/playerShip1_green.png" id="2_1ut6l"]
[ext_resource type="Script" path="res://scenes/PlatformBlue.gd" id="3_4td7u"]
[ext_resource type="Texture2D" uid="uid://cbwgix0inp3tk" path="res://assets/snow.png" id="4_5xvek"]
[ext_resource type="Texture2D" uid="uid://bngxmk2me0con" path="res://assets/leveldone.png" id="6_wbe1t"]
[ext_resource type="Texture2D" uid="uid://b38fhk73mpjwd" path="res://assets/restartbutton.png" id="7_6fy82"]
[ext_resource type="Texture2D" uid="uid://cq5yn6ecuv8qf" path="res://assets/meteorBrown_big1.png" id="8_hfvlu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0qmb6"]
size = Vector2(138.75, 79)

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(100.011, 77.4256)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(70.8416, 70.5898)

[sub_resource type="CircleShape2D" id="CircleShape2D_vmqhk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mtfd"]
bg_color = Color(0.723168, 0.514105, 0.748151, 0)

[node name="SecondLevel" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_br2km")

[node name="AreaUI" type="ColorRect" parent="."]
offset_left = 1011.0
offset_right = 1151.0
offset_bottom = 79.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="AreaUI"]
offset_left = 9.0
offset_top = 27.0
offset_right = 134.0
offset_bottom = 50.0
text = "OBJECTIVE AREA"

[node name="ObjectiveArea" type="Area2D" parent="." node_paths=PackedStringArray("done")]
position = Vector2(1011, 0)
script = ExtResource("1_foi4b")
done = NodePath("../Done")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2(70.625, 40)
shape = SubResource("RectangleShape2D_0qmb6")

[node name="OutOfScreenArea" type="Area2D" parent="."]
position = Vector2(-3294, 651)
scale = Vector2(57.3301, 2.03591)
script = ExtResource("1_foi4b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfScreenArea"]
position = Vector2(70.625, 40)
shape = SubResource("RectangleShape2D_0qmb6")

[node name="GreenShip" type="RigidBody2D" parent="." groups=["ship"]]
position = Vector2(72.7009, 421.901)
lock_rotation = true

[node name="Sprite2D" type="Sprite2D" parent="GreenShip"]
texture = ExtResource("2_1ut6l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GreenShip"]
shape = SubResource("1")

[node name="PlatformSnow" type="Node2D" parent="."]
position = Vector2(35, 565)
script = ExtResource("3_4td7u")

[node name="SnowPlatform" type="StaticBody2D" parent="PlatformSnow"]

[node name="Sprite2D" type="Sprite2D" parent="PlatformSnow/SnowPlatform"]
texture = ExtResource("4_5xvek")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformSnow/SnowPlatform"]
shape = SubResource("2")

[node name="SnowPlatform2" type="StaticBody2D" parent="PlatformSnow"]
position = Vector2(70, 0)

[node name="Sprite2D" type="Sprite2D" parent="PlatformSnow/SnowPlatform2"]
texture = ExtResource("4_5xvek")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformSnow/SnowPlatform2"]
shape = SubResource("2")

[node name="SnowPlatform3" type="StaticBody2D" parent="PlatformSnow"]
position = Vector2(140, -67)

[node name="Sprite2D" type="Sprite2D" parent="PlatformSnow/SnowPlatform3"]
texture = ExtResource("4_5xvek")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformSnow/SnowPlatform3"]
shape = SubResource("2")

[node name="SnowPlatform4" type="StaticBody2D" parent="PlatformSnow"]
position = Vector2(-69, -67)

[node name="Sprite2D" type="Sprite2D" parent="PlatformSnow/SnowPlatform4"]
texture = ExtResource("4_5xvek")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformSnow/SnowPlatform4"]
shape = SubResource("2")

[node name="Meteors" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Meteors"]
position = Vector2(1052, 287)
rotation = 0.261799
scale = Vector2(1, 1)

[node name="Sprite2D" type="Sprite2D" parent="Meteors/StaticBody2D"]
texture = ExtResource("8_hfvlu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meteors/StaticBody2D"]
scale = Vector2(5.31763, 5.22317)
shape = SubResource("CircleShape2D_vmqhk")

[node name="StaticBody2D2" type="StaticBody2D" parent="Meteors"]
position = Vector2(948, 206)
rotation = -1.0472

[node name="Sprite2D" type="Sprite2D" parent="Meteors/StaticBody2D2"]
texture = ExtResource("8_hfvlu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meteors/StaticBody2D2"]
scale = Vector2(5.31763, 5.22317)
shape = SubResource("CircleShape2D_vmqhk")

[node name="StaticBody2D3" type="StaticBody2D" parent="Meteors"]
position = Vector2(715, 409)
rotation = 1.0472

[node name="Sprite2D" type="Sprite2D" parent="Meteors/StaticBody2D3"]
texture = ExtResource("8_hfvlu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meteors/StaticBody2D3"]
scale = Vector2(5.31763, 5.22317)
shape = SubResource("CircleShape2D_vmqhk")

[node name="StaticBody2D4" type="StaticBody2D" parent="Meteors"]
position = Vector2(423, 223)
rotation = -2.35619
scale = Vector2(1, 1)

[node name="Sprite2D" type="Sprite2D" parent="Meteors/StaticBody2D4"]
texture = ExtResource("8_hfvlu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meteors/StaticBody2D4"]
scale = Vector2(5.31763, 5.22317)
shape = SubResource("CircleShape2D_vmqhk")

[node name="Done" type="TextureRect" parent="."]
visible = false
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("6_wbe1t")

[node name="Button" type="Button" parent="Done"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -135.0
offset_top = -286.0
offset_right = 135.0
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_3mtfd")
icon = ExtResource("7_6fy82")

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
[connection signal="body_entered" from="ObjectiveArea" to="PlatformSnow" method="_on_objective_area_body_entered"]
[connection signal="body_entered" from="OutOfScreenArea" to="OutOfScreenArea" method="_on_body_entered"]
[connection signal="pressed" from="Done/Button" to="ObjectiveArea" method="_on_button_pressed"]
